<resources>
    <string name="app_name">banbanle</string>
    <string name="user_name_input_hint">请输入用户名</string>
    <string name="pwd_input_hint">请输入密码</string>
    <string name="login_tip">登陆</string>
    <string name="logout_tip">登出</string>
    <string name="login_success_tip">登陆成功,正在获取个人信息,请稍后...</string>
    <string name="login_fail_tip">登陆失败</string>
    <string name="fail_to_get_user_info">获取个人信息失败</string>
    <string name="register_tip">注册</string>
    <string name="register_success_tip">注册成功</string>
    <string name="register_fail_tip">注册失败</string>

    <string name="edit_finish">完成</string>
    <string name="edit_content_tip">请输入内容</string>

    <string name="add_task_success">添加任务成功</string>
    <string name="add_task_fail">添加任务失败</string>
    <string name="add_user">添加用户</string>
    <string name="user_info">用户信息</string>

    <string name="add_exist_user">该用户已存在</string>
    <string name="add_user_success">添加用户成功</string>
    <string name="add_user_fail">添加用户失败</string>

    <string name="profile_photo">头像</string>
    <string name="profile_nick_name">昵称</string>
    <string name="profile_account">账号</string>
    <string name="personal_info">用户</string>
    <string name="add_finish">完成</string>

    <string name="task_title_tips">请输入标题</string>
    <string name="task_content_tips">请输入内容</string>
    <string name="user_not_exist">该用户还没有注册帮帮乐</string>

    <string name="title">标题</string>
    <string name="title_input_tip">请输入标题</string>
    <string name="content_input_tip">请输入内容</string>

    <string name="update_profile_success">信息更新成功</string>
    <string name="update_profile_fail">信息更新失败</string>

    <string name="profile_edit_empty_tips">内容不能为空</string>

    <string name="my_creation_task">我创建的</string>
    <string name="my_acception_task">我接受的</string>
    <string name="my_assignme_task">指派给我</string>

    <string name="get_task_detail_failed">获取详情失败</string>
    <string name="deny_task">拒绝</string>
    <string name="accept_task">接受</string>
    <string name="accept_task_fail">接受失败</string>
    <string name="deny_task_fail">拒绝失败</string>
    <string name="accept_task_success">接受成功</string>
    <string name="finish_task_success">谢谢你完成我拜托的事情!!</string>
    <string name="deny_task_success">拒绝成功</string>
    <string name="content">内容</string>
    <string name="task_start_time">开始时间</string>
    <string name="task_end_time">结束时间</string>

    <string name="sure_str">确定</string>
    <string name="cancel_str">取消</string>

    <string name="task_remove">删除</string>
    <string name="task_modify">修改</string>
    <string name="task_remove_success">任务删除成功</string>
    <string name="task_remove_fail">任务删除失败</string>


    <string name="progress_loading">正在加载数据,请稍后...</string>
    <string name="progress_uploading">正在上传数据,请稍后...</string>
    <string name="progress_downloading">正在下载数据,请稍后...</string>
    <string name="progress_operating">正在执行操作,请稍后...</string>

    <string name="main_menu_task">任务</string>
    <string name="main_menu_profile">我的信息</string>
    <string name="main_menu_setting">设置</string>
    <string name="main_menu_version">版本信息</string>
</resources>
