<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/ny_main_bg"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/photo_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/item_click_selector"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/profile_photo"
            android:textSize="16sp"/>

        <com.basesmartframe.bitmap.rounddrawable.RoundedImageView
            android:id="@+id/photo_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/circle_frame"
            android:padding="2dp"
            android:scaleType="center"
            android:src="@drawable/app_icon"
            app:riv_corner_radius="25dp"
            app:riv_oval="true"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/lb_grey"/>

    <RelativeLayout
        android:id="@+id/nickName_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_click_selector"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/profile_nick_name"
            />

        <TextView
            android:id="@+id/nickName_tv"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textColor="@color/text_black"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/lb_grey"/>

    <RelativeLayout
        android:id="@+id/account_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_click_selector"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/profile_account"
            />

        <TextView
            android:id="@+id/account_tv"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textColor="@color/text_black"
            />

    </RelativeLayout>

</LinearLayout>